Cabal-Version:  2.4
Name:           slio
Version:        0.0.0.1
build-type:     Simple
Description:
  SLIO

library
  exposed-modules:
    SimpleStLIO
    DLM
    DCLabels.Core
    DCLabels.DSL
    DCLabels.TCB
    SimpleStLIOUtil
    DCLabels
  hs-source-dirs:
    src
  ghc-options:
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
  default-language: Haskell2010


test-suite dlmtest
  type: exitcode-stdio-1.0
  main-is:  DLMExample.hs
  hs-source-dirs:
    test
    ,src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  default-language: Haskell2010


test-suite cond
  type: exitcode-stdio-1.0
  main-is:  ConditionalStateChange.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  default-language: Haskell2010

test-suite dyn
  type: exitcode-stdio-1.0
  main-is:  DynamicUserHierarchy.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists  -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  default-language: Haskell2010

test-suite timetransitive
  type: exitcode-stdio-1.0
  main-is:  TimeTransitive.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

test-suite replying
  type: exitcode-stdio-1.0
  main-is:  Replaying.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010


test-suite direct
  type: exitcode-stdio-1.0
  main-is:  DirectRelease.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010


test-suite whitelisting
  type: exitcode-stdio-1.0
  main-is:  Whitelisting.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

test-suite relabeling
  type: exitcode-stdio-1.0
  main-is:  Relabeling.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

test-suite erasure
  type: exitcode-stdio-1.0
  main-is:  Erasure.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

test-suite clearance
  type: exitcode-stdio-1.0
  main-is:  Clearance.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

test-suite delrev
  type: exitcode-stdio-1.0
  main-is:   DelRev.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010