Cabal-Version:  2.4
Name:           slio
Version:        0.0.0.1
build-type:     Simple
Description:
  SLIO

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import: common-options
  exposed-modules:
    SimpleStLIO
  --  DLM
  --  DCLabels.Core
  --  DCLabels.DSL
  --  DCLabels.TCB
    SimpleStLIOUtil
  --  DCLabels
  hs-source-dirs:
    src
  --ghc-options:
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,text
  default-language: Haskell2010


-- test-suite dlmtest
--   type: exitcode-stdio-1.0
--   main-is:  DLMExample.hs
--   hs-source-dirs:
--     test
--     ,src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   default-language: Haskell2010


-- test-suite cond
--   type: exitcode-stdio-1.0
--   main-is:  ConditionalStateChange.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   default-language: Haskell2010

-- test-suite dyn
--   type: exitcode-stdio-1.0
--   main-is:  DynamicUserHierarchy.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists  -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   default-language: Haskell2010

test-suite timetransitive
  type: exitcode-stdio-1.0
  main-is:  TimeTransitive.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

test-suite replying
  import: common-options
  type: exitcode-stdio-1.0
  main-is:  Replaying.hs
  hs-source-dirs:
    test
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,text
    ,slio
  default-language: Haskell2010
 


-- test-suite direct
--   type: exitcode-stdio-1.0
--   main-is:  DirectRelease.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010


test-suite whitelisting
  type: exitcode-stdio-1.0
  main-is:  Whitelisting.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

-- test-suite relabeling
--   type: exitcode-stdio-1.0
--   main-is:  Relabeling.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010

-- test-suite erasure
--   type: exitcode-stdio-1.0
--   main-is:  Erasure.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010

-- test-suite clearance
--   type: exitcode-stdio-1.0
--   main-is:  Clearance.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010

-- test-suite delrev
--   type: exitcode-stdio-1.0
--   main-is:   DelRev.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010

-- test-suite sub
--   type: exitcode-stdio-1.0
--   main-is:  Sub.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010

-- test-suite incup
--   type: exitcode-stdio-1.0
--   main-is:  IncUp.hs
--   hs-source-dirs:
--     test,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010
 
test-suite flexlab
  type: exitcode-stdio-1.0
  main-is:  FlexLab.hs
  hs-source-dirs:
    test,
    src
  ghc-options: -package-key -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    ,bytestring
    ,hashable
    ,slio
  other-modules:
    SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010