Cabal-Version:  2.4
Name:           slio
Version:        0.0.0.1
build-type:     Simple
Description:
  SLIO

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fprint-potential-instances 
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  build-depends:
    base          >= 4.7     && < 6.0
    ,containers
    -- ,bytestring
    -- ,bifunctors
    ,hashable
    -- ,text
    ,unordered-containers == 0.2.19.1
    -- , transformers 
    -- == 0.5.6.2
    , mtl == 2.2.2

library
  import: common-options
  exposed-modules:
    -- SimpleStLIO
    NTTSLIO
    RP
    SLIO
    IFC
    -- DLM
  --  DCLabels.Core
  --  DCLabels.DSL
  --  DCLabels.TCB
    SimpleStLIOUtil
  --  DCLabels
  hs-source-dirs:
    src
  --ghc-options:
  
  default-language: Haskell2010

test-suite test-melody
  import: common-options
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test, src
  build-depends:      test-framework,
                      test-framework-hunit,
                      HUnit,

test-suite nttrans
  import: common-options
  type: exitcode-stdio-1.0
  main-is:  nttrans.hs
  hs-source-dirs:
    test/trans,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  other-modules: IFC NTTSLIO SLIO
  build-depends:
    ,slio
    -- , transformers 
  other-modules:
    -- SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

test-suite rptrans
  import: common-options
  type: exitcode-stdio-1.0
  main-is:  rptrans.hs
  hs-source-dirs:
    test/trans,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  other-modules: IFC NTTSLIO SLIO
  build-depends:
    ,slio
    -- , transformers 
  other-modules:
    -- SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010

test-suite ntrptrans
  import: common-options
  type: exitcode-stdio-1.0
  main-is:  ntrptrans.hs
  hs-source-dirs:
    test/trans,
    src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  other-modules: IFC NTTSLIO SLIO
  build-depends:
    ,slio
    , transformers 
  other-modules:
    -- SimpleStLIO,
    SimpleStLIOUtil
  default-language: Haskell2010
-- -- test-suite dlmtest
-- --   type: exitcode-stdio-1.0
-- --   main-is:  DLMExample.hs
-- --   hs-source-dirs:
-- --     test
-- --     ,src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   default-language: Haskell2010

-- -- test-suite cond
-- --   type: exitcode-stdio-1.0
-- --   main-is:  ConditionalStateChange.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   default-language: Haskell2010

-- -- test-suite dyn
-- --   type: exitcode-stdio-1.0
-- --   main-is:  DynamicUserHierarchy.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists  -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   default-language: Haskell2010
-- test-suite rpproble
--   import: common-options
--   type: exitcode-stdio-1.0
--   main-is:  rpproble.hs
--   hs-source-dirs:
--     test/simple,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   other-modules: Impl
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--     ,unordered-containers == 0.2.19.1
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010

-- test-suite timetransitive
--   import: common-options
--   type: exitcode-stdio-1.0

--   main-is:  TimeTransitive.hs
--   hs-source-dirs:
--     test/simple,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   other-modules: Impl
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--     ,unordered-containers == 0.2.19.1
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   default-language: Haskell2010

-- test-suite replaying
--   import: common-options
--   type: exitcode-stdio-1.0
--   main-is:  Replaying.hs
--   --ghc-options: -XDatatypeContexts
--   hs-source-dirs:
--     test/simple
--   other-modules: Impl
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,text
--     ,unordered-containers == 0.2.19.1
--     ,slio
--   default-language: Haskell2010

-- test-suite rptt
--   import: common-options
--   type: exitcode-stdio-1.0
--   main-is:  ReplayingTT.hs
--   --ghc-options: -XDatatypeContexts
--   hs-source-dirs:
--     test/simple
--   other-modules: Impl
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,text
--     ,unordered-containers == 0.2.19.1
--     ,slio
--   default-language: Haskell2010
-- -- test-suite replaying_dlm
-- --   import: common-options
-- --   type: exitcode-stdio-1.0
-- --   main-is:  Replaying_DLM.hs
-- --   hs-source-dirs:
-- --     test
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,text
-- --     ,slio
-- --   default-language: Haskell2010 


-- test-suite direct
--   import: common-options
--   type: exitcode-stdio-1.0
--   main-is:  DirectRelease.hs
--   hs-source-dirs:
--     test/simple,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--     ,unordered-containers == 0.2.19.1
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   other-modules: Impl
--   default-language: Haskell2010


-- test-suite whitelisting
--   import: common-options
--   type: exitcode-stdio-1.0
--   main-is:  Whitelisting.hs
--   hs-source-dirs:
--     test/simple,
--     src
--   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--     base          >= 4.7     && < 6.0
--     ,containers
--     ,bytestring
--     ,hashable
--     ,slio
--     ,unordered-containers == 0.2.19.1
--   other-modules:
--     SimpleStLIO,
--     SimpleStLIOUtil
--   other-modules: Impl
--   default-language: Haskell2010

-- -- test-suite relabeling
-- --   type: exitcode-stdio-1.0
-- --   main-is:  Relabeling.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   other-modules:
-- --     SimpleStLIO,
-- --     SimpleStLIOUtil
-- --   default-language: Haskell2010

-- -- test-suite erasure
-- --   type: exitcode-stdio-1.0
-- --   main-is:  Erasure.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   other-modules:
-- --     SimpleStLIO,
-- --     SimpleStLIOUtil
-- --   default-language: Haskell2010

-- -- test-suite clearance
-- --   type: exitcode-stdio-1.0
-- --   main-is:  Clearance.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   other-modules:
-- --     SimpleStLIO,
-- --     SimpleStLIOUtil
-- --   default-language: Haskell2010

-- -- test-suite delrev
-- --   type: exitcode-stdio-1.0
-- --   main-is:   DelRev.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   other-modules:
-- --     SimpleStLIO,
-- --     SimpleStLIOUtil
-- --   default-language: Haskell2010

-- -- test-suite sub
-- --   type: exitcode-stdio-1.0
-- --   main-is:  Sub.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   other-modules:
-- --     SimpleStLIO,
-- --     SimpleStLIOUtil
-- --   default-language: Haskell2010

-- -- test-suite incup
-- --   type: exitcode-stdio-1.0
-- --   main-is:  IncUp.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   other-modules:
-- --     SimpleStLIO,
-- --     SimpleStLIOUtil
-- --   default-language: Haskell2010
 
-- -- test-suite flexlab
-- --   type: exitcode-stdio-1.0
-- --   main-is:  FlexLab.hs
-- --   hs-source-dirs:
-- --     test,
-- --     src
-- --   ghc-options: -package-key -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-- --   build-depends:
-- --     base          >= 4.7     && < 6.0
-- --     ,containers
-- --     ,bytestring
-- --     ,hashable
-- --     ,slio
-- --   other-modules:
-- --     SimpleStLIO,
-- --     SimpleStLIOUtil
-- --   default-language: Haskell2010